Attempt to fix cutoff of iframe.
Alter css to allow for overflow with media queries.

--- a/css/style.css
+++ b/css/style.css
@@ -464,6 +464,7 @@ body {
   #slide-4 .resume-frame {
     height: 700px;
 		width: 718px;
+    overflow: scroll;
   }
 
   /*#slide-4 .resume-button {
@@ -476,11 +477,13 @@ body {
 	#slide-4 .resume {
     height: inherit;
 		width: inherit;
+    overflow: inherit;
 	}
 
   #slide-4 .resume-frame {
     height: auto;
     width: auto;
+    overflow: scroll;
   }
 
   /*#slide-4 .resume-frame {
